Filters for cameras

--- a/Samples/camera.html
+++ b/Samples/camera.html
@@ -63,7 +63,8 @@
 		name: "camera2",
 		originPosition: { x: 0, y: 1, width: 150, height: 150 },
 		targetPosition: { x: 0, y: 1, width: 150, height: 150 },
-		enabled: false
+		enabled: false,
+		filter: jsGFwk.Sprites.filters.GRAYSCALE
 	});
 	
 	jsGFwk.Camera.createCamera({
