Added TIMER class and object to avoid repeated code for counting frames and then perform actions. Added new sample

--- a/SampleGames/PlatformerAdvance/index.html
+++ b/SampleGames/PlatformerAdvance/index.html
@@ -83,7 +83,7 @@
 			jsGFwk._gameObjects.plataforma.cloneObject({ x: 0 });
 			jsGFwk._gameObjects.plataforma.cloneObject({ x: 256 });
 			
-			jsGFwk.Camera.createCamera({
+			/*jsGFwk.Camera.createCamera({
 				name: "camera1",
 				originPosition: { x: 0, y: 0, width: 320, height: 480 },
 				targetPosition: { x: 320, y: 0, width: 320, height: 480 },
@@ -96,7 +96,7 @@
 				targetPosition: { x: 0, y: 0, width: 320, height: 480 },
 				enabled: true,
 				filter: jsGFwk.Sprites.filters.BLUR
-			});
+			});*/
 			
 			jsGFwk.createObject(player);
 		};
