--- a/SampleGames/TurtleScape/index.html
+++ b/SampleGames/TurtleScape/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title></title>
 	<script language="Javascript" src="../../Framework/jsGFwk.js"></script>
-	<script language="Javascript" src="../../Framework/jsGFwkBasicAnimation.js"></script>
+	<script language="Javascript" src="../../Framework/jsGFwk2dFastAnimation.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkRM.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkIO.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkCollisions.js"></script>
@@ -42,7 +42,7 @@
 	jsGFwk.settings.width = 600;
 	jsGFwk.settings.height = 400;
 	
-	jsGFwk.include("BasicAnimation");
+	jsGFwk.include("FastAnimation");
 	jsGFwk.include("ResourceManager");
 	jsGFwk.include("IO");
 	jsGFwk.include("Collisions");
