--- a/jsGHIDE/index.html
+++ b/jsGHIDE/index.html
@@ -10,6 +10,8 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
 
+		<script src="scripts/externals/jszip.min.js"></script>
+		<script src="scripts/vendor/FileSaver.js"></script>
 		<script src="scripts/externals/codemirror.js"></script>
 		<script src="scripts/linq/additiveTools.linq.js"></script>
 		<script src="scripts/externals/mode/javascript/javascript.js"></script>
@@ -110,6 +112,7 @@
 				</div>
 			</div>
 			<div class="hMover"></div>
+			<div class="popzipIcon"><img src="content/popzip.png" style="width: 20px;" title="Get generated zipped code"></div>
 			<div class="popoutIcon"><img src="content/popout.png" style="width: 20px;" title="Get generated code"></div>
 			<div class="results-container">
 				<iframe src="javascript:document.write('no results, yet!');" id="testResults-iFrame"></iframe>
