--- a/SampleGames/BoxJumper/index.html
+++ b/SampleGames/BoxJumper/index.html
@@ -13,6 +13,8 @@
 	<script language="Javascript" src="../../Framework/jsGFwkScenes.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkPath.js"></script>
 	
+	<script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
+	
 	<script language="Javascript" src="scripts/hud.js"></script>
 	<script language="Javascript" src="scripts/bala.js"></script>
 	<script language="Javascript" src="scripts/player.js"></script>
