Trench almost done

--- a/SampleGames/TrenchesOnFire/index.html
+++ b/SampleGames/TrenchesOnFire/index.html
@@ -49,7 +49,7 @@
     //Create new objects
     var leftTrenchController = new trenchController({
         side: global.sides.left,
-        x: global.trenchConfig.trenchDefinition.width,
+        x: 126, //global.trenchConfig.trenchDefinition.width,
         showFire: true,
         trenchDirection: global.trenchDirections.right
     });
