--- a/SampleGames/DeWake/index.html
+++ b/SampleGames/DeWake/index.html
@@ -35,12 +35,13 @@
 </html>
 <script>
     var gameParameters = {
-            point: 0,
-            screensCount: 0,
-            fireRate: 0.25,
-            liveRecover: 0.2,
-            reloadRate: 3,
-            speed: 4 },
+        point: 0,
+        screensCount: 0,
+        fireRate: 0.5,
+        liveRecover: 0.5,
+        reloadRate: 1,
+        speed: 2,
+        totalScreenCount: 0 },
         cicleColorValue = 0;
 
 	jsGFwk.settings.canvas = "canvas";
