Pad and update for tecno

--- a/SampleGames/DeWake/index.html
+++ b/SampleGames/DeWake/index.html
@@ -16,7 +16,8 @@
 	<script language="Javascript" src="../../Framework/jsGFwkJukebox.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkCamera.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkWebStorage.js"></script>
-	
+    <script language="Javascript" src="../../Framework/jsGFwkGamepad.js"></script>
+	    
     <script language="Javascript" src="scripts/hud.js"></script>
     <script language="Javascript" src="scripts/bullet.js"></script>
     <script language="Javascript" src="scripts/player.js"></script>
@@ -59,6 +60,7 @@
 	jsGFwk.include("Path");
     jsGFwk.include("Camera");
     jsGFwk.include("Storage");
+    jsGFwk.include("Gamepad");
 	
 	jsGFwk.Fonts.createFont({ name: 'pixelated', source: 'fonts/zxBold.ttf' });
 
