More about TecNoVirus

--- a/SampleGames/DeWake/index.html
+++ b/SampleGames/DeWake/index.html
@@ -43,7 +43,8 @@
         reloadRate: 1,
         speed: 2,
         totalScreenCount: 0 },
-        cicleColorValue = 0;
+        cicleColorValue = 0,
+        cicleShadow = 0;
 
 	jsGFwk.settings.canvas = "canvas";
 	jsGFwk.settings.clearColor = "rgb(10, 10, 10)";
