--- a/SampleGames/Eater/index.html
+++ b/SampleGames/Eater/index.html
@@ -131,6 +131,10 @@
              {left: 122, top: 262, width: 19, height: 28}]);
         jsGFwk.Sprites.eater.loop(true);
         
+        jsGFwk.Sprites.createSprite({ id: "live",
+            graphic: jsGFwk.ResourceManager.graphics.main.image,
+			left: 60, top: 262, width: 19,height: 28 });
+        
         jsGFwk.Sprites.createSpriteCollection("yeti",
             jsGFwk.ResourceManager.graphics.main.image, 
             [{left: 279, top: 260, width: 23, height: 30}, 
