Some small changes

--- a/SampleGames/Eater/index.html
+++ b/SampleGames/Eater/index.html
@@ -95,7 +95,7 @@
 	jsGFwk.Fonts.createFont({ name: 'pixelated', source: 'fonts/pixelated.ttf' });
     jsGFwk.Fonts.createFont({ name: 'oxi', source: 'fonts/OXYGENE1.ttf' });
     jsGFwk.Fonts.createFont({ name: 'zxBold', source: 'fonts/zxBold.ttf' });
-    jsGFwk.Fonts.createFont({ name: 'gooddog', source: 'fonts/GoodDog.otf' });
+    jsGFwk.Fonts.createFont({ name: 'gooddog', source: 'fonts/GoodDog.ttf' });
     jsGFwk.Fonts.createFont({ name: 'fff', source: 'fonts/FFF_Tusj.ttf' });
     
     var music = {};
