--- a/SampleGames/Eater/index.html
+++ b/SampleGames/Eater/index.html
@@ -234,6 +234,7 @@
         jsGFwk.ResourceManager.sounds.pickTrack.audio.loop = false;
         jsGFwk.ResourceManager.sounds.pickTrack.audio.volume = 0.6;
         
+        //Comment this to unmute the game
         jsGFwk.ResourceManager.sounds.mute();
         
         jsGFwk.Scenes.scenes.hud.enable();
