--- a/SampleGames/Eater/index.html
+++ b/SampleGames/Eater/index.html
@@ -168,6 +168,10 @@
             graphic: jsGFwk.ResourceManager.graphics.main.image,
 			left: 60, top: 262, width: 19,height: 28 });
         
+        jsGFwk.Sprites.createSprite({ id: "mud",
+            graphic: jsGFwk.ResourceManager.graphics.main.image,
+			left: 122, top: 299, width: 19,height: 19 });
+        
         jsGFwk.Sprites.createSpriteCollection("yeti",
             jsGFwk.ResourceManager.graphics.main.image, 
             [{left: 279, top: 260, width: 23, height: 30}, 
