--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -234,8 +234,8 @@
                             Coffin, dracul, Light,
                             dayCounter, GLOBAL.exitContainer] });
 								
-					//jsGFwk.Scenes.scenes.main.enable();
-                    jsGFwk.Scenes.scenes.game.enable();
+					jsGFwk.Scenes.scenes.main.enable();
+                    //jsGFwk.Scenes.scenes.game.enable();
 					
 					jsGFwk._gameObjects.progress.destroy();
 				};
