--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -228,6 +228,14 @@
                          {left: 447, top: 156, width: 30, height: 30}]);
 					jsGFwk.Sprites.heads.loop(false);
                     
+                   jsGFwk.Sprites.createSpriteCollection("torch", jsGFwk.ResourceManager.graphics.all.image, 
+						[{left: 64, top: 77, width: 6, height: 10},
+						 {left: 72, top: 79, width: 10, height: 6},
+                         {left: 86, top: 75, width: 6, height: 11},
+                         {left: 95, top: 77, width: 10, height: 8},
+                         {left: 109, top: 76, width: 11, height: 7}]);
+					jsGFwk.Sprites.torch.loop(true);
+                    
 					jsGFwk.Sprites.createSpriteCollection("lever", jsGFwk.ResourceManager.graphics.all.image, 
 						[{left: 467, top: 70, width: 17, height: 12},
 						 {left: 488, top: 70, width: 17, height: 12}]);
