--- a/SampleGames/atom/index.html
+++ b/SampleGames/atom/index.html
@@ -12,6 +12,7 @@
 	<script language="Javascript" src="../../Framework/jsGFwkScenes.js"></script>
 	<script language="Javascript" src="../../Framework/jsGFwkFonts.js"></script>
     <script language="Javascript" src="../../Framework/jsGFwkTimers.js"></script>
+    <script language="Javascript" src="../../Framework/jsGFwkGamepad.js"></script>
     
     <script language="Javascript" src="../../Framework/jsGFwkDebugger.js"></script>
 	
@@ -50,6 +51,7 @@
 		jsGFwk.include("Scenes");
 		jsGFwk.include("Fonts");
         jsGFwk.include("Timer");
+        jsGFwk.include("Gamepad");
 		
 		jsGFwk.Fonts.createFont({ name: 'zxBold', source: 'fonts/zxBold.ttf' });
         jsGFwk.Fonts.createFont({ name: 'roboto', source: 'fonts/RobotoMono-Thin.ttf' });
