--- a/SampleGames/Witch/index.html
+++ b/SampleGames/Witch/index.html
@@ -139,7 +139,7 @@
              {left: 174, top: 138, width: 7, height: 12}]);
         jsGFwk.Sprites.firewall.loop(true);
 
-        jsGFwk.ResourceManager.sounds.mute();
+        //jsGFwk.ResourceManager.sounds.mute();
         
         jsGFwk.Scenes.scenes.hud.enable();
     };
