--- a/SampleGames/ShaculaV2/levelCreator/index.html
+++ b/SampleGames/ShaculaV2/levelCreator/index.html
@@ -1,30 +1,100 @@
 <html>
     <head></head>
     <body>
-        <div id="canvas" style="background-color: gray; width: 630; height: 480; float: left; margin-right: 10px; cursor: crosshair;">
-
+        <div id="canvas" style="background-color: gray;
+            width: 630; height: 480; float: left; margin-right: 10px; cursor: crosshair;
+            background-color: #a2ca77; border: 1px solid">
+            <div id="coords" style="position: relative; color:red; font-family: arial; font-size:8pt;">
+                X: <span id="coordx"></span> - Y: <span id="coordy"></span>
+            </div>
+            <div id="frame" style="position: relative; display:none; border: 1px solid red; width: 0px; height:0px; top: -10px;"></div>
         </div>
         <div>
-            <label>Background:</label>
+            <label>Texture:</label>
             <br>
-            <input type="text" value="" id="bgImage" onblur="updateBackground()">
+            <select onchange="changeTexture(this)">
+                <option value="1">Stars</option>
+                <option value="2">Red Brick</option>
+                <option value="3">Dark Brick</option>
+                <option value="4">Bright Brick</option>
+                <option value="5">Moss Brick</option>
+            </select>
+            <br>
+            <label>Paint as:</label>
+            <br>
+            <input type="radio" value="1" name="paint" onclick="changePaintOption(1)" checked> Wall
+            <br>
+            <input type="radio" value="2" name="paint" onclick="changePaintOption(2)"> Background
+            <br>
+            <select size="5" id="objects">
+            </select>
+            <br>
+            <input type="button" value="Refresh" onclick="refresh()">
             <br>
             <br>
-            <label>Level:</label>
+            <label>JSON Level:</label>
             <br>
-            <textarea id="result" style="width: 462px; height: 405px;"></textarea>
+            <textarea id="result" style="width: 300px; height: 150px;"></textarea>
+            <br>
+            <input type="button" value="Get JSON Level" onclick="getjson()">
+            <input type="button" value="Save Image" onclick="saveimage()">
         </div>
+        <canvas width="630" height="480" id="lienzo" style="display: none;"></canvas>
     </body>
     <script>
         var canvas = document.getElementById('canvas');
         var result = document.getElementById('result');
+        var c = document.getElementById('lienzo');
+        var ctx = c.getContext('2d');
+        var backgrounds = [];
         var platforms = [];
         var clickState = false;
         var x = 0, y = 0;
+        var currentTexture = '1';
+        var paintOption = 1;
 
-        function updateBackground() {
-            var bg = document.getElementById('bgImage').value;
-            canvas.style.backgroundImage = "url('" + bg + "')"; 
+        var divCoord = document.getElementById('coords');
+        var xcoord = document.getElementById('coordx');
+        var ycoord = document.getElementById('coordy');
+        var frame = document.getElementById('frame');
+
+        var texture_1 = new Image();
+        var texture_2 = new Image();
+        var texture_3 = new Image();
+        var texture_4 = new Image();
+        var texture_5 = new Image();
+
+        texture_1.src = "images/star.png";
+        texture_2.src = "images/red.png";
+        texture_3.src = "images/dark.png";
+        texture_4.src = "images/bright.png";
+        texture_5.src = "images/moss.png";
+
+        function refresh() {
+            ctx.clearRect(0, 0, 630, 480);
+
+            for (var i = 0; i < backgrounds.length; i++) {
+                var pattern = ctx.createPattern(backgrounds[i].texture, 'repeat');
+                ctx.fillStyle = pattern;
+                ctx.fillRect(backgrounds[i].x, backgrounds[i].y, backgrounds[i].width, backgrounds[i].height);
+            }
+
+            for (var i = 0; i < platforms.length; i++) {
+                var pattern = ctx.createPattern(platforms[i].texture, 'repeat');
+                ctx.fillStyle = pattern;
+                ctx.fillRect(platforms[i].x, platforms[i].y, platforms[i].width, platforms[i].height);
+            }
+
+            var bg = lienzo.toDataURL();
+            canvas.style.backgroundImage = "url('" + bg + "')";
+        }
+
+        function changeTexture(dd) {
+            currentTexture = dd.value;
+        }
+
+        function changePaintOption(option) {
+            paintOption = option;
         }
 
         function divClick(event) {
@@ -34,27 +104,56 @@
                 clickState = true;
             } else {
                 clickState = false;
-                platforms.push({
-                    x: x, y: y,
-                    width: event.offsetX - x,
-                    height: event.offsetY - y
-                });
 
-                var div = document.createElement('div');
-                div.style.position = 'relative';
-                div.style.width = event.offsetX - x + 'px';
-                div.style.height = event.offsetY - y + 'px';
-                div.style.top = y + 'px';
-                div.style.left = x + 'px';
-                div.style.border = '1px solid red';
+                if (paintOption === 1) {
+                    platforms.push({
+                        x: x, y: y,
+                        width: event.offsetX - x,
+                        height: event.offsetY - y,
+                        texture: window['texture_' + currentTexture]
+                    });
+                } else {
+                    backgrounds.push({
+                        x: x, y: y,
+                        width: event.offsetX - x,
+                        height: event.offsetY - y,
+                        texture: window['texture_' + currentTexture]
+                    });
+                }
 
-                canvas.appendChild(div);
-
-                result.innerHTML = JSON.stringify(platforms);
+                refresh();
             }
         }
 
+        function divMouseMove(event) {
+            divCoord.style.top = (event.offsetY + 2) + 'px';
+            divCoord.style.left = (event.offsetX + 2) + 'px';
+            xcoord.innerHTML = event.offsetX;
+            ycoord.innerHTML = event.offsetY;
+        }
+
+        function getjson() {
+            var level = [];
+
+            for (var i = 0; i < platforms.length; i++) {
+                level.push({
+                    x: platforms[i].x,
+                    y: platforms[i].y,
+                    width: platforms[i].width,
+                    height: platforms[i].height
+                });
+            }
+
+            result.innerHTML = JSON.stringify(level);
+        }
+
+        function saveimage() {
+            var dataURL = lienzo.toDataURL('image/png');
+            window.open(dataURL);
+        }
+
         canvas.addEventListener('click', divClick, false);
+        canvas.addEventListener('mousemove', divMouseMove, false);
 
     </script>
 </html>
