--- a/SampleGames/ShaculaV2/levelCreator/index.html
+++ b/SampleGames/ShaculaV2/levelCreator/index.html
@@ -21,6 +21,7 @@
                 <option value="5">Moss Brick</option>
                 <option value="6">Wood</option>
                 <option value="7">Invisible</option>
+                <option value="8">Lava</option>
             </select>
             <br>
             <label>Paint as:</label>
@@ -84,6 +85,7 @@
         var texture_4 = new Image();
         var texture_5 = new Image();
         var texture_6 = new Image();
+        var texture_8 = new Image();
 
         texture_1.src = "images/star.png";
         texture_2.src = "images/red.png";
@@ -91,6 +93,7 @@
         texture_4.src = "images/bright.png";
         texture_5.src = "images/moss.png";
         texture_6.src = "images/wood.png";
+        texture_8.src = "images/lava.png";
 
         function refresh() {
             ctx.clearRect(0, 0, 630, 480);
