--- a/SampleGames/ShaculaV2/index.html
+++ b/SampleGames/ShaculaV2/index.html
@@ -33,6 +33,7 @@
 	<script language="Javascript" src="scripts/portal.js"></script>
 	<script language="Javascript" src="scripts/skeletonDoor.js"></script>
 	<script language="Javascript" src="scripts/itemContainer.js"></script>
+	<script language="Javascript" src="scripts/inGameItem.js"></script>
 	
 	<body>
 		<canvas id="canvas" width="630" height="480"></canvas>
@@ -63,7 +64,7 @@
         }
 		
 		var GLOBAL = {
-            currentLevel: 1,
+            currentLevel: 4,
             maxOil: 500, 
             lightOil: 100,
             minRadiusLight: 50,
@@ -236,6 +237,13 @@
                          {left: 1066, top: 57, width: 18, height: 17},
 						 {left: 1045, top: 57, width: 18, height: 17}]);
 					jsGFwk.Sprites.items.loop(false);
+
+                    jsGFwk.Sprites.createSpriteCollection("inGameItems", jsGFwk.ResourceManager.graphics.all.image, 
+						[{left: 1027, top: 89, width: 18, height: 18},
+                         {left: 1001, top: 89, width: 18, height: 18},
+                         {left: 955, top: 89, width: 18, height: 18},
+						 {left: 979, top: 89, width: 18, height: 18}]);
+					jsGFwk.Sprites.inGameItems.loop(false);
                     
                    jsGFwk.Sprites.createSpriteCollection("heads", jsGFwk.ResourceManager.graphics.all.image, 
 						[{left: 355, top: 156, width: 30, height: 30},
@@ -275,7 +283,8 @@
                             GLOBAL.sawContainer,
                             GLOBAL.batContainer, GLOBAL.fallingWallContainer,
                             GLOBAL.movableWallContainer,
-                            Coffin, Portal, SkeletonDoor, dracul, Light,
+                            Coffin, Portal, SkeletonDoor,
+							InGameItem, dracul, Light,
 							ItemContainer,
                             GLOBAL.exitContainer] });
 								
